--- a/Parcel-frontend/package.json
+++ b/Parcel-frontend/package.json
@@ -1,16 +1,16 @@
 {
   "name": "parcel-frontend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
     "parcel-bundler": "^1.12.3"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "index.html"
+    "start": "parcel index.html"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
