--- a/BackEnd/HeroMatch/Properties/launchSettings.json
+++ b/BackEnd/HeroMatch/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/character",
+      "launchUrl": "api/characters",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
