--- a/BackEnd/HeroMatch/Properties/launchSettings.json
+++ b/BackEnd/HeroMatch/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/character",
+      "launchUrl": "api/characters",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +19,7 @@
     "HeroMatch": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/character",
+      "launchUrl": "api/characters",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
