added basic game controller

--- a/BackEnd/HeroMatch/HeroMatch.csproj
+++ b/BackEnd/HeroMatch/HeroMatch.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190802181533_addedDbSetGame.cs" />
+    <Compile Remove="Migrations\20190802181533_addedDbSetGame.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
