--- a/BackEnd/HeroMatch/HeroMatch.csproj
+++ b/BackEnd/HeroMatch/HeroMatch.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <Compile Remove="Migrations\20190802181533_addedDbSetGame.cs" />
     <Compile Remove="Migrations\20190802181533_addedDbSetGame.Designer.cs" />
+    <Compile Remove="Migrations\20190802183607_lazyLoading.cs" />
+    <Compile Remove="Migrations\20190802183607_lazyLoading.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
