fixed game switch on character result page

--- a/BackEnd/HeroMatch/HeroMatch.csproj
+++ b/BackEnd/HeroMatch/HeroMatch.csproj
@@ -11,6 +11,8 @@
     <Compile Remove="Migrations\20190802183607_lazyLoading.Designer.cs" />
     <Compile Remove="Migrations\20190805173128_fixedXinZhaoCharURL.cs" />
     <Compile Remove="Migrations\20190805173128_fixedXinZhaoCharURL.Designer.cs" />
+    <Compile Remove="Migrations\20190812154026_newGameImages.cs" />
+    <Compile Remove="Migrations\20190812154026_newGameImages.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
